--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,6 +12,14 @@ code {
     monospace;
 }
 
+:root {
+  --base-size: 70px;
+  --neg-base-size: calc(var(--base-size) * -1);
+  --tb-margin: calc(var(--neg-base-size) / 2);
+  --lr-margin: calc(var(--neg-base-size) / 4);
+  --app-spacing: 25px;
+  --app-font-size: 1.6rem;
+}
 /*----------------------------------------------------------->
 	Hero Banner
 <------------------------------------------------------------*/
@@ -253,7 +261,266 @@ h4 {
   font-weight: 600;
   color: var(--clr-primary, #333);
 }
+.poll-social {
+  border: #fff 3px solid;
+  border-radius: var(--app-border-rad);
+  background-color: var(--clr-drk);
+  justify-content: center;
+  padding: var(--app-spacing) 0;
+  align-items: center;
+  form {
+    background-color: var(--clr-light-bg);
+    border-radius: var(--app-border-rad);
+  }
+  span {
+    text-decoration: line-through;
+    filter: opacity(0.7);
+    margin-right: -7px;
+  }
+  h4 {
+    margin-bottom: var(--app-spacing)
+  }
+  button{
+    margin-left: var(--app-spacing);
+  }
+}
 
+.poll-option {
+  display: block;
+  height: 30px;
+  font-size: var(--app-font-size);
+  text-align: center;
+  border: 1px solid #ccc;
+  transition: var(--app-transition);
+}
+
+.poll-option input[type="radio"] {
+  display: none;
+}
+
+.poll-option input[type="radio"]:checked + label,
+.poll-option:has(input[type="radio"]:checked) {
+  background: var(--clr-primary);
+  color: var(--clr-drk);
+}
+/*----------------------------------------------------------->
+	Contact Section
+<------------------------------------------------------------*/
+.contact {
+  width: 100%;
+  align-items: center;
+}
+.message {
+  margin-bottom: 50px;
+  margin-top: -25px;
+  width: min(100% - 10svw, 750px);
+  h5 {
+    font-size: var(--app-font-size);
+    font-weight: 600;
+    text-align: center;
+    margin: var(--app-spacing) 0;
+  }
+  input, textarea {
+    width: 100%;
+    border-radius: var(--app-border-rad);
+    background-color: var(--clr-light-blue);
+  }
+  textarea {
+    min-height: 30svh;
+    resize: none;
+  }
+}
+#email {
+  a {
+  font-size: 2.8rem;
+  }
+}
+.icon {
+  width: 50px;
+  height: 50px;
+  margin: auto;
+}
+.icon.px {
+  width: 60px;
+  height: 60px;
+}
+.icon.li {
+  width: 40px;
+  height: 40px;
+}
+/*----------------------------------------------------------->
+	Bottom of page
+<------------------------------------------------------------*/
+.m-auto {
+  margin: -25px auto;
+}
+
+.hex {
+  clip-path: var(--app-clip-hex);
+  width: var(--base-size);
+  height: var(--base-size);
+  background-color: var(--clr-primary);
+  justify-content: center;
+  align-items: center;
+  color: var(--clr-drk);
+  margin: 0 5px;
+}
+
+.mid-hex {
+  margin: var(--tb-margin) var(--lr-margin);
+}
+
+footer {
+  height: 15svh;
+  line-height: 50px;
+  text-align: center;
+  margin-top: -25px;
+  color: var(--clr-light);
+  a {
+    text-decoration: none;
+    color: var(--clr-light);
+  }
+}
+
+
+@media(max-width: 1000px) {
+  h1 {
+    font-size: 5rem;
+  }
+}
+@media(max-width: 900px) {
+  .small-hide {
+    display: none;
+    opacity: 0;
+  }
+  .small-solid-orange-hex-one, .med-orange-hex-one {
+    display: none;
+  }
+}
+@media (max-width: 780px) {
+  :root{
+    --base-size: 60px;
+    --app-spacing: 15px;
+    --app-font-size: 1.4rem;
+  }
+  /* .btn {
+    height: 40px;
+    line-height: 40px;
+  } */
+  .hex {
+    font-size: 3rem;
+    .fa-linkedin-in {
+      font-size: 2.8rem;
+    }
+  }
+  .play {
+    figure {
+      width: 70px;
+      height: 110px;
+      font-size: 0.7rem;
+    }
+  }
+  h1 {
+    font-size: 4rem;
+  }
+  h2 {
+    font-size: 2rem;
+    margin-top: -10px;
+  }
+  h3 {
+    font-size: 1.7rem;
+  }
+  h4 {
+    font-size: 3rem;
+  }
+  .games {
+    flex-direction: column;
+  }
+  article {
+    flex-direction: column;
+    margin: 0 0 50px 0;
+  }
+  .art-col-reverse {
+    flex-direction: column-reverse;
+  }
+  .photo, .display {
+    margin: 50px 0;
+  }
+}
+
+@media (max-width: 650px) {
+  h1 {
+    font-size: 3rem;
+  }
+  .photo {
+    width: 80svw;
+    height: 80svw;
+  }
+  .display {
+    width: 85svw;
+    height: 51svw;
+  }
+  .text {
+    width: 80svw;
+  }
+  footer {
+    font-size: 1.2rem;
+  }
+  .games-title, .contact-title {
+    background-attachment: scroll;
+  }
+}
+
+@media (max-width: 480px) {
+  :root{
+    --base-size: 40px;
+    --app-spacing: 10px;
+    --app-font-size: 1.2rem;
+  }
+  /* .btn {
+    height: 30px;
+    line-height: 30px;
+  } */
+  .hex {
+    font-size: 2rem;
+    .fa-linkedin-in {
+      font-size: 1.6rem;
+    }
+  }
+  h1 {
+    font-size: 2.5rem;
+  }
+  h2 {
+    font-size: 1.7rem;
+    margin: 0;
+  }
+  h3 {
+    font-size: 1.2rem;
+  }
+  h4 {
+    font-size: 2.5rem;
+  }
+  footer {
+    font-size: 1rem;
+  
+    p {
+      margin: 0;
+      line-height: 40px;
+    }
+  }
+  .pop-out {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    .game-wrapper {
+      height: 400px;
+    }
+  }
+    footer {
+    font-size: 1rem;
+  }
+} 
 /* Footer */
 footer {
   background-color: #1A2233;
