--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--clr-drk);
 }
 
 code {
@@ -20,146 +23,16 @@ code {
   --app-spacing: 25px;
   --app-font-size: 1.6rem;
 }
-/*----------------------------------------------------------->
-	Hero Banner
-<------------------------------------------------------------*/
-
-header {
-  height: 100svh;
-  width: 100%;
+main {
+  background-color: var(--clr-bg);
   position: relative;
-  overflow: hidden;
-  align-items: center;
+  height: 500px;
+  z-index: 10000;
 }
-
-h1,h2,h3,h4 {
-  text-shadow: -1px 1px 2px var(--clr-light-blue);
+footer {
+  position: relative;
+  z-index: 10000;
 }
-
-h1 {
-  font-size: 6.5rem;
-  text-align: center;
-  margin-top: 6.5rem;
-  span {
-    color: var(--clr-primary);
-    text-shadow: -1px 1px 2px var(--clr-tan);
-  }
-}
-
-h2 {
-  width: min(50svw, 800px);
-  font-size: 3.5rem;
-  margin-top: -25px;
-
-}
-h3 {
-  text-align: center;
-  font-family: "IBM Plex Mono", "Noto Sans Mono", monospace;
-  font-size: 2rem;
-}
-h4 {
-  font-size: 4rem;
-}
-
-.cursor {
-  visibility: hidden;
-}
-
-.cursor.visible {
-  visibility: visible;
-}
-/*----------------------------------------------------------->
-	Hero Banner - Parallax
-<------------------------------------------------------------*/
-.hero-banner {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  object-position: center;
-  z-index: -100;
-}
-.btn-wrapper {
-  margin: auto;
-  z-index: 1000;
-  background-color: #fefefe30;
-  padding: var(--app-border-rad);
-  border-radius: var(--app-border-rad);
-  a {
-    width: 150px;
-    margin: 5px;
-    text-align: center;
-  }
-}
-.btn.secondary {
-  background-color: var(--clr-light);
-  color: var(--clr-primary);
-}
-.parallax {
-  position: fixed;
-  pointer-events: none;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.large-orange-hex {
-  top: 200px;
-  left: 50px;
-  width: 700px;
-  height: 600px;
-  filter: opacity(0.7);
-  background-image: url("../media/img/hexagon.svg");
-}
-
-.med-dark-hex {
-  top: 300px;
-  left: 100px;
-  width: 350px;
-  height: 300px;
-  background-image: url("../media/img/hexagon-dark.svg");
-}
-.med-orange-hex-two {
-  top: 400px;
-  right: 500px;
-  width: 350px;
-  height: 300px;
-  background-image: url("../media/img/hexagon.svg");
-}
-.med-orange-hex-one {
-  top: 500px;
-  right: 100px;
-  width: 350px;
-  height: 300px;
-  background-image: url("../media/img/hexagon.svg");
-}
-.small-solid-orange-hex-one {
-  top: 500px;
-  left: 300px;
-  width: 230px;
-  height: 200px;
-  background-image: url("../media/img/hexagon-solid.svg");
-}
-.small-solid-orange-hex-two {
-  top: 200px;
-  right: 150px;
-  width: 230px;
-  height: 200px;
-  background-image: url("../media/img/hexagon-solid.svg");
-}
-.large-dark-blur-hex {
-  top: 500px;
-  right: 30svw;
-  width: 750px;
-  height: 640px;
-  filter: blur(5px) opacity(0.9) brightness(1.5);
-  background-image: url("../media/img/hexagon-dark.svg");
-  z-index: 150;
-}
-
-
 .floating-nav {
   position: fixed;
   top: -100px;
@@ -370,17 +243,7 @@ h4 {
   margin: var(--tb-margin) var(--lr-margin);
 }
 
-footer {
-  height: 15svh;
-  line-height: 50px;
-  text-align: center;
-  margin-top: -25px;
-  color: var(--clr-light);
-  a {
-    text-decoration: none;
-    color: var(--clr-light);
-  }
-}
+
 
 
 @media(max-width: 1000px) {
@@ -523,7 +386,7 @@ footer {
 } 
 /* Footer */
 footer {
-  background-color: #1A2233;
+  background-color: var(--clr-bg);
   padding: 40px 20px 20px;
   font-size: 14px;
   color: #fefefe;
