--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,22 @@
 @charset "utf-8";
-
+/*
+  - Email
+  - GitHub
+    - Repos
+    - Profile
+  - LinkedIn
+  - Resume
+  - Site Links
+    - Home
+    - About
+    - Portfolio
+    - Games
+    - Contact
+    - Releases
+  - Other Releases page
+  - Collaborators page
+  - Sites that offer a lot of resources or inspiration
+*/
 /* Footer */
 footer {
   background-color: var(--clr-bg);
@@ -72,35 +89,4 @@ footer {
 
 .social-icons a:hover {
   transform: scale(1.3);
-}
-
-@media (max-width: 768px) {
-  .burger {
-    display: flex;
-  }
-
-  .nav-links {
-    position: absolute;
-    top: 60px;
-    left: 0;
-    width: 100%;
-    background: white;
-    flex-direction: column;
-    align-items: center;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease-in-out;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    z-index: 999;
-  }
-
-  .nav-links.open {
-    max-height: 300px;
-    padding: 1rem 0;
-  }
-
-  .nav-links li {
-    margin: 0.5rem 0;
-  }
 }
