--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
-
+/*
+  - 
+*/
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
