--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,36 +1,19 @@
 @charset "utf-8";
-/*
-  - Email
-  - GitHub
-    - Repos
-    - Profile
-  - LinkedIn
-  - Resume
-  - Site Links
-    - Home
-    - About
-    - Portfolio
-    - Games
-    - Contact
-    - Releases
-  - Other Releases page
-  - Collaborators page
-  - Sites that offer a lot of resources or inspiration
-*/
 /* Footer */
 footer {
   background-color: var(--clr-bg);
   padding: 40px 20px 20px;
   font-size: 14px;
-  color: #fefefe;
+  color: var(--clr-light);
+
 }
 
 .footer-columns {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  max-width: 1200px;
   margin: 0 auto;
+  border-top: 1px solid var(--clr-light);
 }
 
 .footer-column {
@@ -39,26 +22,6 @@ footer {
   margin-bottom: 20px;
 }
 
-.footer-column h4 {
-  margin-bottom: 15px;
-  font-size: 16px;
-}
-
-.footer-column ul {
-  list-style: none;
-  padding: 0;
-}
-
-.footer-column li {
-  margin-bottom: 10px;
-  text-align: left;
-}
-
-.footer-column a {
-  color: #fff;
-  text-decoration: none;
-  padding-left: 10px;
-}
 
 .footer-column a:hover {
   text-decoration: underline;
@@ -68,12 +31,11 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
   margin: 0 auto;
-  border-top: 1px solid #fff;
+  border-top: 1px solid var(--clr-light);
   padding-top: 20px;
   font-size: 13px;
-  color: #A07EFF;
+  color: var(--clr-light);
 }
 
 .social-icons {
@@ -83,10 +45,10 @@ footer {
 .social-icons a {
   margin-left: 15px;
   font-size: 18px;
-  color: #A07EFF;
-  transition: transform 0.5s ease;
+  color: var(--clr-light);
+  transition: var(--app-transition);
 }
 
 .social-icons a:hover {
-  transform: scale(1.3);
+  transform: scale(1.1);
 }
