Fixed footer and header styling and layout

--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -8,7 +8,7 @@
   --clr-drk: #010518;
   --clr-bg: #001522;
   --clr-light: #fefefe;
-  --clr-light-blue: #bad6ff;
+  --clr-light-blue: #d8e7ff;
   --clr-blue: #60d;
   --clr-primary: #f37121;
   --clr-hover: #e96240;
