--- a/src/css/floating-header.css
+++ b/src/css/floating-header.css
@@ -5,7 +5,7 @@
   top: -100px;
   left: 50%;
   transform: translateX(-50%);
-  background: var(--clr-light-blue);
+  background: var(--clr-drk);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
   border-radius: var(--app-border-rad);
   padding: 0.5rem 1rem;
@@ -23,7 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: var(--clr-drk);
+  color: var(--clr-primary);
 }
 
 .orange-text {
