--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -45,34 +45,46 @@
 /*----------------------------------------------------------->
 	Contact Section
 <------------------------------------------------------------*/
+h5 {
+  font-size: var(--app-font-size);
+  font-weight: 600;
+  text-align: center;
+  margin: var(--app-spacing) 0;
+}
+
 .contact {
-  padding-top: 80px;
-  color: var(--clr-light);
+  height: 100svh;
   width: 100%;
+  color: var(--clr-light);
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
+
 .message {
   margin-bottom: 50px;
   margin-top: -25px;
-  width: min(100% - 10svw, 750px);
-  h5 {
-    font-size: var(--app-font-size);
-    font-weight: 600;
-    text-align: center;
-    margin: var(--app-spacing) 0;
-  }
-  input, textarea {
-    width: 100%;
-    border-radius: var(--app-border-rad);
-    background-color: var(--clr-light-blue);
-  }
-  textarea {
-    min-height: 30svh;
-    resize: none;
-  }
+  width: 60svw;
   a {
   font-size: 2.8rem;
+  }
+}
+.contact input {
+  width: 100%;
+  height: 50px;
+  border-radius: var(--app-border-rad);
+  background-color: var(--clr-light-blue);
+}
+.contact textarea {
+  width: 100%;
+  height: 40svh;
+  border-radius: var(--app-border-rad);
+  resize: vertical;
+  background-color: var(--clr-light-blue);
+}
+@media(max-width: 700px) {
+  .message {
+    width: 100%;
   }
 }
