--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -10,11 +10,13 @@ a {
 
 .portfolio-form {
   width: 100%;
+  height: 100svh;
   display: flex;
   flex-direction: column;
   position: relative;
   text-align: center;
   align-items: center;
+  justify-content: center;
   padding-top: 80px;
   color: var(--clr-light);
   transition: var(--app-transition);
