--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -24,6 +24,8 @@
   ); 
   --app-border-rad: 6px;
   --app-transition: all 0.3s ease-in-out;
+  --main-font-size: 1.2rem;
+  --title-one-font-size: 2.2rem;
 }
 
 /*----------------------------------------------------------->
