--- a/src/css/index.css
+++ b/src/css/index.css
@@ -30,8 +30,14 @@ main {
 }
 
 .header-title {
-  font-size: 2.2rem;
+  font-size: var(--font-size-subtitle);
   margin: 0;
+}
+.home-page {
+  height: 100svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .splash-wrapper {
