--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -24,10 +24,19 @@
   ); 
   --app-border-rad: 6px;
   --app-transition: all 0.3s ease-in-out;
-  --main-font-size: 1.2rem;
-  --title-one-font-size: 2.2rem;
+  --small-font-size: 0.8rem;
+  --font-size-reg: 1.4rem;
+  --font-size-subtitle: 3.4rem;
+  --font-size-title: 5rem;
 }
 
+@media(max-width: 800px) {
+  :root {
+  --small-font-size: 0.6rem;
+  --font-size-reg: 1rem;
+  --font-size-subtitle: 1.8rem;
+  --font-size-title: 3rem;  }
+}
 /*----------------------------------------------------------->
   Utility Functions
 <-----------------------------------------------------------*/
