--- a/src/css/floating-header.css
+++ b/src/css/floating-header.css
@@ -6,7 +6,7 @@
   left: 50%;
   transform: translateX(-50%);
   background: var(--clr-drk);
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+  box-shadow: var(--app-box-shadow);
   border-radius: var(--app-border-rad);
   padding: 0.5rem 1rem;
   z-index: 9999;
