--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 footer {
   background-color: var(--clr-drk);
-  font-size: 14px;
+  font-size: var(--font-size-reg);
   color: var(--clr-light);
 }
 
@@ -30,7 +30,7 @@ footer {
   align-items: center;
   margin: 0 auto;
   border-top: 1px solid var(--clr-light);
-  font-size: 13px;
+  font-size: var(--font-size-small);
   color: var(--clr-light);
 }
 
@@ -40,7 +40,7 @@ footer {
 
 .social-icons a {
   margin-left: 15px;
-  font-size: 18px;
+  font-size: var(--font-size-subtitle);
   color: var(--clr-light);
   transition: var(--app-transition);
 }
