--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -27,7 +27,7 @@
 .poll-option {
   display: block;
   height: 30px;
-  font-size: var(--app-font-size);
+  font-size: var(--app-font-size-reg);
   text-align: center;
   border: 1px solid #ccc;
   transition: var(--app-transition);
@@ -67,18 +67,20 @@ h5 {
   margin-top: -25px;
   width: 60svw;
   a {
-  font-size: 2.8rem;
+  font-size: var(--font-size-subtitle);
   }
 }
 .contact input {
   width: 100%;
   height: 50px;
+  font-size: var(--font-size-reg);
   border-radius: var(--app-border-rad);
   background-color: var(--clr-light-blue);
 }
 .contact textarea {
   width: 100%;
   height: 40svh;
+  font-size: var(--font-size-reg);
   border-radius: var(--app-border-rad);
   resize: vertical;
   background-color: var(--clr-light-blue);
