--- a/src/css/hangman.css
+++ b/src/css/hangman.css
@@ -68,3 +68,15 @@
 .big-font {
   font-size: 5rem;
 }
+
+@media (max-width: 480px) {
+  .pop-out {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    .game-wrapper {
+      height: 400px;
+    }
+  }
+} 
