--- a/src/css/index.css
+++ b/src/css/index.css
@@ -63,7 +63,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 150px 0;
+  padding: var(--app-spacing) 50px;
   background: #e6efff0c;
   backdrop-filter: blur(10px);
   border-radius: var(--app-border-rad);
@@ -74,27 +74,25 @@ main {
   flex-direction: column;
   gap: 1.5rem;
   margin-bottom: 2rem;
-  width: 100%;
-  max-width: 800px;
+  width: 40svw;
 }
 
 .splash-info-btn-wrapper {
   height: fit-content;
-  width: 100%;
-  max-width: 800px;
+  width: 40svw;
   display: flex;
   gap: 1rem;
-  margin-bottom: 2rem;
 }
 
 .info-btn {
   flex: 1;
   height: 80px;
-  background-color: var(--clr-light-blue);
+  background-color: var(--clr-drk);
   border-radius: var(--app-border-rad);
   box-shadow: var(--app-box-shadow);
   transition: var(--app-transition);
   overflow: hidden;
+  font-size: var(--font-size-reg);
 }
 
 .info-btn:hover {
@@ -112,12 +110,13 @@ main {
 }
 
 .splash-item {
-  background-color: var(--clr-light-blue);
+  background-color: var(--clr-drk);
   border-radius: 10px;
   box-shadow: var(--app-box-shadow);
   height: 120px;
   transition: var(--app-transition);
   overflow: hidden;
+  font-size: var(--font-size-subtitle);
 }
 
 .splash-link {
@@ -127,9 +126,8 @@ main {
   height: 100%;
   width: 100%;
   text-decoration: none;
-  font-size: var(--font-size-reg);
   font-weight: 600;
-  color: var(--clr-primary);
+  color: var(--clr-light-blue);
 }
 
 .splash-item:hover {
