--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -8,7 +8,7 @@ a {
   color: var(--clr-light);
 }
 
-.portfolio-form {
+.portfolio-wrapper {
   width: 100%;
   height: 100svh;
   display: flex;
@@ -21,7 +21,7 @@ a {
   color: var(--clr-light);
   transition: var(--app-transition);
 }
-.portfolio-form label {
+.portfolio-wrapper label {
   font-size: 1.2rem;
   color: var(--clr-light);
   margin-bottom: 10px;
@@ -29,10 +29,15 @@ a {
 .category-select {
   width: 300px;
   height: 50px;
-  font-size: 1rem;
+  font-size: var(--font-size-reg);
   border-radius: var(--app-border-rad);
+  background-color: var(--clr-light-blue);
+  cursor: pointer;
 }
-.portfolio-wrapper {
+.category-select:active {
+  cursor: pointer;
+}
+.portfolio-framework {
   height: 650px;
   position: relative;
   transition: var(--app-transition);
@@ -43,7 +48,7 @@ a {
   margin: 25px 0;
 }
 
-.portfolio-wrapper.fade-out {
+.portfolio-framework.fade-out {
   opacity: 0;
 }
 .portfolio-preview {
