--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -53,8 +53,9 @@ h5 {
 }
 
 .contact {
-  height: 100svh;
+  min-height: 100svh;
   width: 100%;
+  padding-top: 80px;
   color: var(--clr-light);
   display: flex;
   flex-direction: column;
@@ -64,7 +65,6 @@ h5 {
 
 .message {
   margin-bottom: 50px;
-  margin-top: -25px;
   width: 60svw;
   a {
   font-size: var(--font-size-subtitle);
