--- a/src/css/hangman.css
+++ b/src/css/hangman.css
@@ -1,6 +1,12 @@
 /*----------------------------------------------------------->
 	Hangman
 <------------------------------------------------------------*/
+:root {
+  --retro-clr-bg: #9c9ca7;
+  --retro-clr-topbar-blue: #10103b;
+  --retro-clr-exit-red:  #ce2c16;
+}
+
 .pop-out {
   width: fit-content;
   height: fit-content;
@@ -8,7 +14,7 @@
   top: 100px;
   left: 100px;
   z-index: 1000;
-  background-color: #9c9ca7;
+  background-color: var(--retro-clr-bg);
   color: #012;
   font-size: 1.6rem;
   font-family: monospace;
@@ -21,15 +27,16 @@
 .top-bar {
   height: 30px;
   width: 100%;
+  display: flex;
   justify-content: right;
-  background-color: #10103b;
+  background-color: var(--retro-clr-topbar-blue);
 }
 
 .exit-game {
   height: 30px;
   width: 30px;
   line-height: 30px;
-  background-color: #ce2c16;
+  background-color: var(--retro-clr-exit-red);
   text-align: center;
 }
 .game-wrapper {
@@ -52,14 +59,14 @@
 .hangman-start {
   height: 50px;
   width: 90px; 
-  border: solid 2px #10103b;
+  border: solid 2px var(--retro-clr-topbar-blue);
   background-color: var(--clr-tan);
 }
 .letter-guess {
   height: 70px;
   width: 90px;
   padding-left: var(--app-spacing);
-  border: solid 2px #10103b;
+  border: solid 2px var(--retro-clr-topbar-blue);
   background-color: var(--clr-light);
 }
 .letter-guess:focus, .hangman-start:focus {
