Fixed portfolio styles and responsiveness

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -143,7 +143,9 @@ main {
   width: 500px;
   border-radius: var(--app-border-rad);
 }
-
+.info-icon {
+  margin-left: 10px;
+}
 .splash-link {
   display: flex;
   align-items: center;
