--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,7 +2,7 @@
 footer {
   background-color: var(--clr-drk);
   font-size: var(--font-size-reg);
-  color: var(--clr-light);
+  color: var(--clr-light-blue);
 }
 
 .footer-columns {
@@ -19,10 +19,10 @@ footer {
   margin-bottom: 20px;
 }
 
-
-.footer-column a:hover {
-  text-decoration: underline;
+.footer-column a{
+  transition: var(--app-transition);
 }
+
 
 .footer-bottom {
   display: flex;
@@ -44,7 +44,7 @@ footer {
   color: var(--clr-light);
   transition: var(--app-transition);
 }
-
+.footer-column a:hover,
 .social-icons a:hover {
-  transform: scale(1.1);
+  color: var(--clr-primary);
 }
