--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -3,7 +3,6 @@
 /*----------------------------------------------------------->
   Roots
 <-----------------------------------------------------------*/
-
 :root {
   --clr-drk: #010518;
   --clr-bg: #001522;
@@ -23,9 +22,11 @@
     0 50%
     ); 
   --app-spacing: 25px;
+  --app-spacing-tiny: 3px;
   --app-border-rad: 6px;
   --app-transition: all 0.3s ease-in-out;
   --app-box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  --app-box-shadow-raised: 0 6px 14px rgba(0,0,0,0.15);
   --font-size-small: 0.8rem;
   --font-size-reg: 1.4rem;
   --font-size-subtitle: 2.8rem;
@@ -55,9 +56,6 @@
   .small-hide {
     display: none;
     opacity: 0;
-  }
-  .small-solid-orange-hex-one, .med-orange-hex-one {
-    display: none;
   }
 }
 /*----------------------------------------------------------->
@@ -91,20 +89,12 @@ ul {
   border-radius: 50%;
 }
 
-.pointer {
-  cursor: pointer;
-}
-.image-hover {
-  transition: var(--app-transition);
-}
-.image-hover:hover {
-  transform: scale(1.1);
-  filter: brightness(0.8) saturate(1.3);
-}
-
 .center {
   justify-content: center;
   align-items: center;
+}
+.mt-75 {
+  margin-top: 75px;
 }
 .mb-10 {
   margin-bottom: 10px;
@@ -124,39 +114,6 @@ ul {
   z-index: 1;
 }
 
-.z1 {
-  z-index: 1;
-}
-.z2 {
-  z-index: 2;
-}
-
-.z3 {
-  z-index: 3;
-}
-
-.z4 {
-  z-index: 4;
-}
-
-.z5 {
-  z-index: 5;
-}
-
-.z6 {
-  z-index: 6;
-}
-
-.z7 {
-  z-index: 7;
-}
-
-.z8 {
-  z-index: 8;
-}
-.z100 {
-  z-index: 100;
-}
 
 button {
   user-select: none;
@@ -186,21 +143,29 @@ button {
   position: relative;
   transition: var(--app-transition);
   cursor: pointer;
-  /* i {
-    font-size: 1.4rem;
-    width: 25px;
-    height: 25px;
-    line-height: 25px;
-  } */
 }
+
+.btn.secondary {
+  background-color: var(--clr-drk);
+  color: var(--clr-light-blue);
+}
+
 .btn:hover {
-  background-color: #fb8332;
-  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
-  transform: translateY(-1px);
+  filter: brightness(1.3);
 }
 
 .btn:active {
   background-color: #c85000;
-  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
-  transform: translateY(0);
+}
+
+.btn.secondary:hover{
+  filter: brightness(1.8);
+}
+
+.icon-hover {
+  transition: var(--app-transition);
+}
+
+.icon-hover:hover {
+   filter: brightness(1.3);
 }
